overflow fixed

--- a/style.css
+++ b/style.css
@@ -510,14 +510,14 @@ footer #legal {
 
     /* testimo */
     article .testimo {
-        width: 20em;
+        width: 18em;
         margin-top: 2em;
-        /* outline: red solid 2px; */
+        outline: red solid 2px;
     }
 
     .testimo q {
         font-size: 1.5rem;
-        width: 15em;
+        width: 12em;
     }
 
     /* FAQ */
